<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.album.DetailAlbumActivity">

    <data>
        <variable
            name="album"
            type="co.edu.uniandes.vinilos.data.model.Album" />
        <import type="android.view.View" alias="V"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{album == null ? V.GONE : V.VISIBLE}">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_round_audiotrack"
            android:focusable="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/activity_detail_album_cd_floating_btn_new_track" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/purple_700"
                    android:textSize="12sp"
                    app:dateFormat="@{album.releaseDate}"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    tools:text="1970/11/04" />

                <TextView
                    android:id="@+id/tracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/recordLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                    android:text="@string/activity_detail_album_label_tracks"/>

                <TextView
                    android:id="@+id/recordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvDescription"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    android:text="@string/activity_detail_album_label_recordLabel" />

                <ImageView
                    android:id="@+id/ivDetailAlbum"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/template_album_cd_ivAlbum"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:imageUrl="@{album.cover}"
                    app:srcCompat="@android:drawable/editbox_dropdown_dark_frame" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{album.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivDetailAlbum"
                    tools:text="Poeta del pueblo" />

                <TextView
                    android:id="@+id/tvArtist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textEnd"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenre"
                    app:performersFromList="@{album.performers}"
                    tools:text="Rubén Blades Bellido de Luna" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{album.description}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toEndOf="@+id/tvArtist"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tvArtist"
                    app:layout_constraintTop_toBottomOf="@+id/tvArtist"
                    tools:text="Recopilación de 27 composiciones del cosmos Blades que los bailadores y melómanos han hecho suyas en estos 40 años de presencia de los ritmos y concordias afrocaribeños en múltiples escenarios internacionales. Grabaciones de Blades para la Fania con las orquestas de Pete Rodríguez, Ray Barreto, Fania All Stars y, sobre todo, los grandes éxitos con la Banda de Willie Colón" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{album.genre}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/purple_700"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    tools:text="Salsa" />

                <TextView
                    android:id="@+id/tvLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@{album.recordLabel}"
                    app:layout_constraintEnd_toEndOf="@+id/tvDescription"
                    app:layout_constraintStart_toEndOf="@+id/recordLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    tools:text="Sony" />

                <TextView
                    android:id="@+id/tvTracks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvLabel"
                    app:layout_constraintStart_toStartOf="@+id/tvDescription"
                    app:layout_constraintTop_toBottomOf="@id/tracks"
                    app:tracksFromList="@{album.tracks}"
                    tools:text="Song 1\nSong 2\nSong 3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>