...
            android:textSize="16sp"
            android:text="@string/activity_collector_detail_label_albumes"
            app:layout_constraintStart_toStartOf="@+id/tvCollectorEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvCollectorEmail" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCollectorAlbums"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
